# ctes-game

./: .gitattributes  .gitignore  CLAUDE.md  OUTCOME.md  README.md  early_game_eval_after.md  early_game_eval_before.md  gen_save.py  launch.ps1  main.py  pyproject.toml  roguelite_progression.md
dev_scripts/: screenshot.ps1
docs/: world-map-design.md
game/agent/: playtest.py
game/core/: config.py  engine.py  entities.py  save.py  state.py
game/meta/: progression.py
game/renderer/: display.py
scripts/: backlog.json  generate_sprites.py  orchestrator.py  validate.py
