[project]
name = "ctes-game"
version = "0.1.0"
description = "Kingdoms of the Forgotten — medieval fantasy colony builder"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pygame==2.6.1",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]
